# isaaclab_sim_to_real

./: .gitignore  CUSTOMIZE.md  README.md  SETUP.md  setup.py  setup.sh
SimToReal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
deploy/: setup.py
deploy/docker/: .container.cfg  Dockerfile  docker-compose.yaml  x11.yaml
deploy/docker/utils/: container_interface.py
deploy/lcm_types/: aliengo_body_data_lcmt.lcm  aliengo_leg_cmd_lcmt.lcm  aliengo_leg_cmd_lcmt.py  aliengo_leg_data_lcmt.lcm  rc_command.lcm  rc_command_lcmt.py
deploy/scripts/: deploy.py  run_deploy.py
deploy/sdk/: CMakeLists.txt  aliengo_lcm.cpp
deploy/sdk/include/: aliengo_body_data_lcmt.hpp  aliengo_leg_cmd_lcmt.hpp  aliengo_leg_data_lcmt.hpp  rc_command_lcmt.hpp
deploy/test/: test_config.py  test_model.py
deploy/utils/: command.py  lcm_bridge.py  observer.py  runner.py
docker/: Dockerfile  Makefile
learn/: README.md  __init__.py  pyproject.toml
learn/exts/locomotion/: setup.py
learn/exts/locomotion/config/: extension.toml
learn/exts/locomotion/locomotion/: ui_extension_example.py
learn/exts/locomotion/locomotion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
learn/scripts/: play.py  rename_template.py  train.py
learn/scripts/rsl_rl/: play.py  train.py
resources/robots/: convert_urdf.py
resources/robots/aliengo/: .asset_hash  aliengo.usd  config.yaml
resources/robots/aliengo/Props/: instanceable_meshes.usd
resources/robots/aliengo/urdf/: .asset_hash  aliengo.urdf  (+1 more)
runs/unitree_aliengo_rough/2024-09-23_16-14-46/: events.out.tfevents.1727101042.yixuan-MS-7B79.15295.0
(+13 files in other folders)
